fix the uv index not showing and the beach info page overflowing

--- a/assets/pages/css/beach-info.css
+++ b/assets/pages/css/beach-info.css
@@ -56,6 +56,7 @@ body {
     align-items: center;
     gap: 50px; 
     padding: 20px;
+    padding-left: 40px;
     /* border: 1px solid red; */
 }
 
